--- a/home.html
+++ b/home.html
@@ -13,9 +13,8 @@
         <div class="logo">SPACE BOOKER</div>
         <nav>
             <a href="home.html" class="active">Home</a>
-            <a href="booking.html">Book Space</a>
-            <a href="dashboard.html">Dashboard</a>
-            <a href="about.html">About</a>
+            <a href="admin_login.html">Admin</a>
+            <a href="student_login.html">Student</a>
             <a href="login.html">Logout</a>
         </nav>
     </header>
@@ -23,13 +22,9 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
-             <img src="../images/emea.jpg" alt="College Space Booking">
             <h1>Book Your College Space Easily</h1>
             <p>Find available halls, labs, and facilities at a glance.</p>
             <a href="booking.html" class="btn-primary">Book Now</a>
-        </div>
-        <div class="hero-image">
-           
         </div>
     </section>
 
@@ -38,17 +33,15 @@
         <h2>What You Can Do</h2>
         <div class="feature-cards">
             <div class="card">
-                <!-- <img src="images/calendar.svg" alt="Check Availability"> -->
+                
                 <h3>Check Availability</h3>
                 <p>See which halls or labs are free in real-time.</p>
             </div>
             <div class="card">
-                <!-- <img src="images/settings.svg" alt="Manage Resources"> -->
                 <h3>Manage Resources</h3>
                 <p>Admins can update room details, capacity, and facilities.</p>
             </div>
             <div class="card">
-                <!-- <img src="images/booking.svg" alt="Quick Booking"> -->
                 <h3>Quick Booking</h3>
                 <p>Book your required space in just a few clicks.</p>
             </div>
