added index file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="navbar">
         <div class="logo">SPACE BOOKER</div>
         <nav>
-            <a href="home.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="admin_login.html">Admin</a>
             <a href="student_login.html">Student</a>
             <a href="login.html">Logout</a>
