added index file

--- a/AVThall.html
+++ b/AVThall.html
@@ -28,7 +28,7 @@
 
            
 
-            <a href="booking.html?space=AVT" class="btn-primary">Book Now</a>
+            <a href="./student_booking.html" class="btn-primary">Book Now</a>
             <a href="report_issue.html?space=AVThall" class="btn-secondary">Report Issue</a>
         </div>
 
