--- a/confirmation.html
+++ b/confirmation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Booking Confirmation</title>
-  <link rel="stylesheet" href="../confirmation.css">
+  <link rel="stylesheet" href="./confirmation.css">
 </head>
 <body>
   <div class="booking-container">
