--- a/Auditorium.html
+++ b/Auditorium.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Auditorium - SPACE BOOKER</title>
-    <link rel="stylesheet" href="../Auditorium.css">
+    <link rel="stylesheet" href="./Auditorium.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
