--- a/IEDCspace.html
+++ b/IEDCspace.html
@@ -28,7 +28,7 @@
 
             
 
-            <a href="../student_booking.html" class="btn-primary">Book Now</a>
+            <a href="./student_booking.html" class="btn-primary">Book Now</a>
             <a href="booking.html?space=IEDC" class="btn-secondary">Report Issue</a>
         </div>
         
