--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard - SPACE BOOKER</title>
-    <link rel="stylesheet" href="../admin_dashboard.css">
+    <link rel="stylesheet" href="./admin_dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
