--- a/Auditorium.html
+++ b/Auditorium.html
@@ -28,8 +28,8 @@
 
             
 
-            <a href="booking.html?space=Auditorium" class="btn-primary">Book Now</a>
-            <a href="report_issue.html?space=Auditorium" class="btn-secondary">Report Issue</a>
+            <a href="student_booking.html" class="btn-primary">Book Now</a>
+            
         </div>
 
     </div>
