--- a/CA_Lab.html
+++ b/CA_Lab.html
@@ -29,8 +29,8 @@
 
             
 
-            <a href="booking.html?space=CA_Lab" class="btn-primary">Book Now</a>
-             <a href="report_issue.html?space=CS_Lab" class="btn-secondary">Report Issue</a>
+            <a href="student_booking.html" class="btn-primary">Book Now</a>
+         
         </div>
 
     </div>
