--- a/Seminar_Hall.html
+++ b/Seminar_Hall.html
@@ -32,8 +32,8 @@
 
             <!-- Buttons -->
             <div class="button-group">
-                <a href="booking.html?space=Seminar_Hall" class="btn-primary">Book Now</a>
-                <a href="report_issue.html?space=Seminar_Hall" class="btn-secondary">Report Issue</a>
+                <a href="student_booking.html" class="btn-primary">Book Now</a>
+            
             </div>
 
         </div>
