--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="admin_login.html">Admin</a>
             <a href="student_login.html">Student</a>
-            <a href="login.html">Logout</a>
+            <a href="logout.html">Logout</a>
         </nav>
     </header>
 
@@ -24,7 +24,7 @@
         <div class="hero-text">
             <h1>Book Your College Space Easily</h1>
             <p>Find available halls, labs, and facilities at a glance.</p>
-            <a href="booking.html" class="btn-primary">Book Now</a>
+            <a href="student_booking.html" class="btn-primary">Book Now</a>
         </div>
     </section>
 
@@ -34,30 +34,21 @@
         <div class="feature-cards">
             <div class="card">
                 
-                <h3>Check Availability</h3>
-                <p>See which halls or labs are free in real-time.</p>
+                <a href="spaces.html"><h3>Check Availability</h3>
+                <p>See which halls or labs are free in real-time.</p></a>
             </div>
             <div class="card">
-                <h3>Manage Resources</h3>
-                <p>Admins can update room details, capacity, and facilities.</p>
+               <a href="admin_dashboard.html"><h3>Manage Resources</h3>
+                <p>Admins can update room details, capacity, and facilities.</p></a>
             </div>
             <div class="card">
-                <h3>Quick Booking</h3>
-                <p>Book your required space in just a few clicks.</p>
+                 <a href="confirmation.html"><h3>Quick Booking</h3>
+                <p>Book your required space in just a few clicks.</p></a>
             </div>
         </div>
     </section>
 
-    <!-- Quick Links Section -->
-    <section class="quick-links">
-        <h2>Quick Actions</h2>
-        <div class="links-grid">
-            <a href="booking.html" class="link-card">Book Hall</a>
-            <a href="labs.html" class="link-card">Check Labs</a>
-            <a href="reports.html" class="link-card">View Bookings</a>
-            <a href="profile.html" class="link-card">My Profile</a>
-        </div>
-    </section>
+   
 
     <!-- Footer -->
     <footer>
