--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         <div class="feature-cards">
             <div class="card">
                 
-                <a href="spaces.html"><h3>Check Availability</h3>
+                <a href="spaces.html" style="text-decoration: none; color: inherit;"><h3>Check Availability</h3>
                 <p>See which halls or labs are free in real-time.</p></a>
             </div>
             <div class="card">
-               <a href="admin_dashboard.html"><h3>Manage Resources</h3>
+               <a href="admin_dashboard.html" style="text-decoration: none; color: inherit;"><h3>Manage Resources</h3>
                 <p>Admins can update room details, capacity, and facilities.</p></a>
             </div>
             <div class="card">
-                 <a href="confirmation.html"><h3>Quick Booking</h3>
+                 <a href="confirmation.html" style="text-decoration: none; color: inherit;"><h3>Quick Booking</h3>
                 <p>Book your required space in just a few clicks.</p></a>
             </div>
         </div>
